--- a/step-2/package.json
+++ b/step-2/package.json
@@ -11,10 +11,7 @@
     "firebase-admin": "^8.10.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
